q10 q11 Change to stream only